Fixed image scaling.
Image will now stay on the right side, regardless of screen size.
It will also not make a horizontal scroll bar now, nice.

--- a/style.css
+++ b/style.css
@@ -91,13 +91,23 @@ hr {
     color: black;
 }
 
-#favorite-artwork {
-    float: right;
-    margin-top: -220px;
-    position: absolute;
-    margin-left: 270px;
+.row-section {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+
+.row-section img {
+    padding-top: 19vh;
+    width: 40vw;
+    
 }
 
 .header-text span {
     color: red;
+}
+
+.header-text p {
+    margin-top: 17px;
 }
